# quacode_dbh

./: CMakeLists.txt  TODO  quacode_tree.diff  readme.txt
algorithms/: constraints.cpp.in  constraints.hh  cuda.hh  dumb.cpp  dumb.hh  export.hh  gen.cpp  gen.hh  kernels.cpp  kernels.cu  kernels.hh  logger.cpp  logger.hh  montecarlo.cpp  montecarlo.hh  test.cpp  test.hh
asyncalgo/: asyncalgo.cpp  asyncalgo.hh  asyncalgo.hpp
callback/: asyncalgo.cpp  asyncalgo.hh
cuda/: constraints.cu  constraints.hh  helper.cu  helper.hh  kernels.cu  kernels.hh
data/: condensed_1_default_order.txt  condensed_1_reordered.txt  condensed_2_default_order.txt  condensed_2_reordered.txt
examples/: baker-dbh.cpp  baker.cpp  connect-four.cpp  disjunction.cpp  matrix-game-dbh.cpp  matrix-game.cpp  nim-fibo-dbh.cpp  nim-fibo.cpp  qbf.cpp  qdimacs.cpp  rndQCSP.cpp  speeddating.cpp
quacode/: CMakeLists.txt
quacode/examples/: connect-four.cpp
quacode/privateMisc/: readme.txt
quacode/quacode/: asyncalgo.hh  asyncalgotypes.hh  qcsp.hh  qspaceinfo.cpp  qspaceinfo.hh  qspaceinfo.hpp  quacodetypes.hh
quacode/quacode/asyncalgo/: asyncalgo.cpp  asyncalgo.hpp
quacode/quacode/qint/branch/: view-values.cpp  view-values.hpp
quacode/quacode/search/sequential/: qdfs.hh
scripts/: compute_results.py  get_results.sh  results.txt  results_gen.txt  results_monte.txt  results_orig.txt
